--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,4 +1,4 @@
-
+/* 
         body{
             padding: 0;
             margin: 0;
@@ -144,4 +144,31 @@
                 background-color:rgba(44, 3, 110, 0.753);
                 color: white;
             }
-   
+    */
+
+
+    .product-form {
+        width: 20rem;
+        max-width: 90%;
+        margin: auto;
+    }
+    
+    .product-item {
+        width: 20rem;
+        max-width: 95%;
+    }
+    
+    .product__title {
+        font-size: 1.2rem;
+        text-align: center;
+    }
+    
+    .product__price {
+        text-align: center;
+        color: #4d4d4d;
+        margin-bottom: 0.5rem;
+    }
+    
+    .product__description {
+        text-align: center;
+    }
