--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -6,15 +6,14 @@
 <body>
    <%- include('includes/navigation.ejs') %>
 
-    
-   <main>
-    <form class="product-form" action="/admin/add-product" method="POST">
-        <div class="form-control">
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title">
-        </div>
-        
-        <button title="submit">Add Product</button>
-    </form>
-</main>
+    <main>
+        <form class="product-form" action="/admin/add-product" method="POST">
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+            </div>
+
+            <button class="btn" type="submit">Add Product</button>
+        </form>
+    </main>
 <%- include('includes/end.ejs') %>
